small additions to templates made

--- a/www/templates/tab-books.html
+++ b/www/templates/tab-books.html
@@ -1,4 +1,10 @@
 <ion-view view-title="Books">
+    <ion-nav-title>
+        <h1 class="title">My Books</h1>
+        <div class="buttons">
+            <button class="button" ng-click="addNewBook()">Add</button>
+        </div>
+    </ion-nav-title>
     <ion-content>
         <ion-list>
             <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="book in books"
