--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -4,7 +4,7 @@
             <div class="item item-divider">Recent Updates</div>
             <div class="item item-body">
                 <div>
-                    There is a fire in <b>sector 3</b>
+                    There are <b>3</b> Books in your Library
                 </div>
             </div>
         </div>
