--- a/www/templates/ontheshelf.html
+++ b/www/templates/ontheshelf.html
@@ -1,3 +1,27 @@
-<ion-view>
-<ion-content class="has-header">On the Shelf</ion-content>
+<ion-view view-title="Books on Shelf">
+    <ion-nav-title>
+        <h1 class="title">My Books</h1>
+        <div class="buttons">
+            <button class="button" ng-click="addNewBook()">Add</button>
+        </div>
+    </ion-nav-title>
+    <ion-content>
+        <ion-list>
+            <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="book in books"
+                      type="item-text-wrap" href="#/app/ontheshelf/{{book.isbn}}">
+                <img ng-src="{{book.cover}}">
+
+                <h2>{{book.title}}</h2>
+
+                <p>{{book.subtitle}}</p>
+                <i class="icon ion-chevron-right icon-accessory"></i>
+
+                <ion-option-button class="button-assertive" ng-click="remove(book)">
+                    Delete
+                </ion-option-button>
+            </ion-item>
+        </ion-list>
+    </ion-content>
 </ion-view>
+
+
