--- a/www/templates/borrowed.html
+++ b/www/templates/borrowed.html
@@ -1,3 +1,24 @@
-<ion-view>
-    <ion-content class="has-header">Borrow Stuff</ion-content>
+<ion-view view-title="borrowed books">
+    <ion-nav-title>
+        <h1 class="title">borrowed Books</h1>
+    </ion-nav-title>
+    <ion-content>
+        <ion-list>
+            <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="book in books"
+                      type="item-text-wrap" href="#/app/ontheshelf/{{book.isbn}}">
+                <img ng-src="{{book.cover}}">
+
+                <h2>{{book.title}}</h2>
+
+                <p>{{book.subtitle}}</p>
+                <i class="icon ion-chevron-right icon-accessory"></i>
+
+                <ion-option-button class="button-balanced" ng-click="putBack(book)">
+                    Back to Shelf
+                </ion-option-button>
+            </ion-item>
+        </ion-list>
+    </ion-content>
 </ion-view>
+
+
