--- a/www/templates/side-menu.html
+++ b/www/templates/side-menu.html
@@ -27,6 +27,9 @@
                 <ion-item nav-clear menu-close href="#/app/sold">
                     sold
                 </ion-item>
+                <ion-item nav-clear menu-close href="#/app/all">
+                    all
+                </ion-item>
             </ion-list>
         </ion-content>
     </ion-side-menu>
