--- a/www/templates/side-menu.html
+++ b/www/templates/side-menu.html
@@ -30,6 +30,9 @@
                 <ion-item nav-clear menu-close href="#/app/all">
                     all
                 </ion-item>
+                <ion-item nav-clear menu-close href="#/app/camera">
+                    cover-gallery
+                </ion-item>
             </ion-list>
         </ion-content>
     </ion-side-menu>
