--- a/www/templates/book-detail.html
+++ b/www/templates/book-detail.html
@@ -24,7 +24,7 @@
                   <i class="icon ion-share"></i>
                   lend it to a friend
               </a>
-              <a class="tab-item" ng-click="remove(book)">
+              <a class="tab-item" ng-click="openPopover($event)">
                   <i class="icon ion-trash-a"></i>
                   delete the book
               </a>
