--- a/www/templates/side-menu.html
+++ b/www/templates/side-menu.html
@@ -33,6 +33,9 @@
                 <ion-item nav-clear menu-close href="#/app/camera">
                     cover-gallery
                 </ion-item>
+                <ion-item nav-clear menu-close href="#/app/newbook">
+                    add a new book
+                </ion-item>
             </ion-list>
         </ion-content>
     </ion-side-menu>
