--- a/www/templates/BookList.html
+++ b/www/templates/BookList.html
@@ -3,6 +3,11 @@
         <h1 class="title">all Books</h1>
     </ion-nav-title>
     <ion-content>
+        <ion-refresher
+                pulling-text="Pull to refresh..."
+                on-refresh="doRefresh()">
+        </ion-refresher>
+
         <div class="list list-inset">
             <label class="item item-input">
                 <i class="icon ion-search placeholder-icon"></i>
