--- a/www/templates/BookList.html
+++ b/www/templates/BookList.html
@@ -30,7 +30,7 @@
                 <p>{{book.subtitle}}</p>
                 <i class="icon ion-chevron-right icon-accessory"></i>
 
-                <ion-option-button class="button-assertive" ng-click="remove(book)">
+                <ion-option-button class="button-assertive" ng-click="removeBook(book)">
                     Delete
                 </ion-option-button>
             </ion-item>
