--- a/www/templates/CoverGallery.html
+++ b/www/templates/CoverGallery.html
@@ -1,14 +1,26 @@
 <ion-view view-title="cover-gallery">
-    <ion-nav-title>
-        <h1 class="title">Cover from Books</h1>
-    </ion-nav-title>
-    <ion-content>
-        <button class="button button-energized" ng-click="addImage()">
-            Add image
-        </button>
-        <br><br>
-        <ion-scroll>
-            <img ng-repeat="image in images" ng-src="{{urlForImage(image)}}" height="200px"/>
-        </ion-scroll>
-    </ion-content>
+  <ion-nav-title>
+    <h1 class="title">Cover from Books</h1>
+  </ion-nav-title>
+  <ion-content ng-init="loadImages()">
+
+    <button class="button button-energized" ng-click="addImage()">
+      Add image
+    </button>
+
+    <div class="row" ng-repeat="image in images" ng-if="$index % 4 === 0">
+      <div class="col col-25" ng-if="$index < images.length">
+        <img ng-src="{{images[$index].src}}" width="100%"/>
+      </div>
+      <div class="col col-25" ng-if="$index + 1 < images.length">
+        <img ng-src="{{images[$index + 1].src}}" width="100%"/>
+      </div>
+      <div class="col col-25" ng-if="$index + 2 < images.length">
+        <img ng-src="{{images[$index + 2].src}}" width="100%"/>
+      </div>
+      <div class="col col-25" ng-if="$index + 3 < images.length">
+        <img ng-src="{{images[$index + 3].src}}" width="100%"/>
+      </div>
+    </div>
+  </ion-content>
 </ion-view>
