refactored newbook function added new server impl. for 20000 json items

--- a/www/templates/BookDetail.html
+++ b/www/templates/BookDetail.html
@@ -16,9 +16,9 @@
           </div>
 
           <div class="item tabs tabs-secondary tabs-icon-left">
-              <a class="tab-item" ng-click="sellBook(book)">
-                  <i class="icon ion-cash"></i>
-                  sell the book
+              <a class="tab-item" ng-click="editBook(book)">
+                  <i class="icon ion-edit"></i>
+                  edit this book
               </a>
               <a class="tab-item" ng-click="lendBook(book)">
                   <i class="icon ion-share"></i>
@@ -26,7 +26,7 @@
               </a>
               <a class="tab-item" ng-click="openPopover($event)">
                   <i class="icon ion-trash-a"></i>
-                  delete the book
+                  delete this book
               </a>
           </div>
 
